Fixed in svn version:

   * Small error in the calculation of rPW86 functional, due to a mismatch
     between its previous definition (Slater exchange contained in GGA) and
     the check on the rho=>0, grad rho=>0 limits. Note that a similar problem
     might also affect hcth, olyp, m06l functionals. 
     Another XC glitch with the new PBEQ2D functional (incorrectly called)
   * NEB calculation can get stuck if the code tries to read &ions namelist
     in the PWscf-related input section
   * NEB: spurious blank character appearing in lines longer than 80
     character with Intel compiler (same problem that was previously
     fixed in PWscf)
   * PH: bug in symmetrization in some special cases (supercells of graphene)
   * PH: bug in restart when the code stops during self consistency
   * PH: ph.x with images wasn't working any longer 

New in 5.0.1 version

   * vdW-DF functional and DFT-D extended to CP (experimental)
   * PWscf: Noncollinear/spin-orbit Berry Phases (experimental)
   * New functionals: SOGGA, M06L (courtesy of Yves Ferro), 
                      PBEQ2D (courtesy of Letizia Chiodo)

Incompatible changes in 5.0.1 version:
   * Variable "amconv" removed from constants.f90, use "amu_ry" instead
   * ld1.x no longer generates pseudopotentials into UPF v.1

Fixed in 5.0.1 version

   * Funny frequencies from matdyn.x if masses were read from file
   * Stress calculation in parallel execution was wrong in the
     Gamma-only case when ScaLAPACK was present (v.5.0 only) 
   * Misc compilation problems with old compilers 

New in 5.0 version

   * More ways of calculating electron-phonon coefficients.
   * Full DFT+U scheme (with J and additional parameters) implemented.
     Should work also for fully-relativistic calculations.
   * band parallelization for Green function sum in EXX (memory replication).

Incompatible changes in 5.0 version:

   * Postprocessing codes dos.x, bands.x, projwfc.x, now use