@@ -507,7 +507,7 @@ for NEC SX6 on a PC). Currently supported architectures are:
 \texttt{aix}&     IBM AIX machines\\
 \texttt{solaris}& PC's running SUN-Solaris\\
 \texttt{sparc}&   Sun SPARC machines\\
-\texttt{crayxt4}& Cray XT4/5 machines\\
+\texttt{crayxt4}& Cray XT4/XT5/XE machines\\
 \texttt{mac686}&  Apple Intel machines running Mac OS X\\
 \texttt{cygwin}&  MS-Windows PCs with Cygwin\\
 \texttt{necsx}&   NEC SX-6 and SX-8 machines\\
